--- a/.ebextensions/wordpress.config
+++ b/.ebextensions/wordpress.config
@@ -21,3 +21,6 @@ option_settings:
     RDS_DB_NAME: 'ebdb'
     RDS_USERNAME: 'test'
     RDS_PASSWORD: 'test'
+    LETSENCRYPT_DOMAIN: 'yourdomain.com'
+    LETSENCRYPT_SUBDOMAIN: 'www.yourdomain.com'
+    LETSENCRYPT_EMAIL: 'you@yourdomain.com'
