--- a/.ebextensions/efs-create.config
+++ b/.ebextensions/efs-create.config
@@ -8,11 +8,11 @@
 option_settings:
   aws:elasticbeanstalk:customoption:
     EFSVolumeName: "EB-EFS-Volume"
-    VPCId: "vpc-d1dcecb9"
+    VPCId: "your vpc instance id"
 ## Subnet Options
-    SubnetA: "subnet-59f0a831"
-    SubnetB: "subnet-5cd94826"
-    SubnetC: "subnet-e633caaa"
+    SubnetA: "your subnet A"
+    SubnetB: "your subnet B"
+    SubnetC: "your subnet C"
 
 Resources:
 ## Mount Target Resources
