--- a/.ebextensions/https-instance.config
+++ b/.ebextensions/https-instance.config
@@ -81,9 +81,9 @@ container_commands:
   # installs certbot
   10_install_certbot:
     command: "mkdir -p /opt/certbot && wget https://dl.eff.org/certbot-auto -O /opt/certbot/certbot-auto && chmod a+x /opt/certbot/certbot-auto"
-  # issue the certificate if it does not exist
+  # issue the certificate if it does not exist - remove --staging flag after testing or when ready to deploy to production
   20_install_certificate:
-    command: "sudo /opt/certbot/certbot-auto certonly --debug --non-interactive --email ${LETSENCRYPT_EMAIL} --agree-tos --webroot --webroot-path /var/www/html/ --domains ${LETSENCRYPT_DOMAIN},${LETSENCRYPT_SUBDOMAIN} --keep-until-expiring --preferred-challenges http-01"
+    command: "sudo /opt/certbot/certbot-auto certonly --debug --non-interactive --email ${LETSENCRYPT_EMAIL} --agree-tos --webroot --webroot-path /var/www/html/ --domains ${LETSENCRYPT_DOMAIN},${LETSENCRYPT_SUBDOMAIN} --keep-until-expiring --preferred-challenges http-01 --staging"
   # create a link so we can use '/etc/pki/tls/certs/ebcert/fullchain.pem'
   # in the apache config file
   30_link:
